  Weather since its maps are small)
* Updated Mac OS X install to put applications in subdirectory:
  /Applications/Galleon/
* Fixed Mac OS launch scripts to enable quit function
* Fixed Movies application (needed an update to parse HTML output change from data source)
* Fixed Windows installer JRE detection (accepts Java 6)


Version 2.4.0 alpha:
----------------------
HD application support.  Try out HD photos!
Local forecast page added to weather.
Known problems:
 * tracker on music in HD is goofy
 * galleon skins in HD don't cover screen--use tivo skins
 * lots of layout glitches in HD
 * HD menu highlights are too big for text
 
Version 2.3.1:
----------------------
Upgraded open-source components to mostly current versions
Use track title instead of file name for "Music" listings
Published modified Bananas library
Switched to build with Java 1.5

Sources are tagged GALLEON_2_3_1 in CVS repository

Native windows packaging is not supported--use the regular version.
You must have Java 5 JRE or higher installed--none is included.

*** Please send in bug reports if there are any problems with things
    that work fine in 2.3.0.  This release should not behave any
    differently ***

Version 2.3.0:
----------------------
Native version for Windows
Resync ToGo video files if moved
Fixed ToGo stats doubling
Fix GoBack subfolders
Fixed ToGo sorting by TiVo name in GUI
Fix movie posters
Fixed upcoming dates


Version 2.2.0:
----------------------

Galleon menu sorting
Internet app support for larger images
TiVo space available in configuration GUI
ToGo recordings show TiVo name in configuration GUI
Added TiVo criteria to ToGo rules
Improved database error handling
ToGo sorting
Jabber app
Fixed iTunes date support
Shoutcast configurable download limits


Version 2.1.0:

----------------------

Shoutcast app now supports all stations

Shoutcast app supports station alternates

Shoutcast favorites

ToGo downloaded recordings can now be downloaded repeatedly
