@@ -10,6 +10,7 @@ Version 2.4.1 alpha:
 * Fixed Mac OS launch scripts to enable quit function
 * Fixed Movies application (needed an update to parse HTML output change from data source)
 * Fixed Windows installer JRE detection (accepts Java 6)
+* Fixed MusicOrganizer MP3 count (1746310)
 
 
 Version 2.4.0 alpha:
